tests/NormalTests/paczka1/fuzzy1/83592651.err
Error in line 2: aljomHP19 S789 75,9
Error in line 10: Nk6ZIfY S789 93,1
Error in line 12: Nk6ZIfY S761 38,1
Error in line 9: A269 A269 54,9
Error in line 22: Nk6ZIfY S578 46,8
Error in line 24: WbrH3EIsj8m A269 55,0
Error in line 14: A269 S761 78,2
Error in line 23: Nk6ZIfY A269 3,7
Error in line 27: WbrH3EIsj8m S761 46,0
Error in line 21: 05i S761 177,2
Error in line 37: WbrH3EIsj8m S578 62,2
